2008-04-01  Dan Williams  <dcbw@redhat.com>

	* src/applet-compat.c
		- (copy_one_wpa_private_key_password): fix check for whether the network
			has already been converted

2008-03-06  Dan Williams  <dcbw@redhat.com>

	Release 0.6.6

2008-03-06  Dan Williams  <dcbw@redhat.com>

	* src/applet.c
		- (nma_update_info): don't use stupid names in the connection dialog

2008-03-06  Dan Williams  <dcbw@redhat.com>

	* autogen.sh
		- Die gnome-common, die

2008-02-28  Dan Williams  <dcbw@redhat.com>

	Release 0.6.5.99  (0.6.6rc2)

2008-02-28  Dan Williams  <dcbw@redhat.com>

	* editor/editor-app.c
	  editor/editor-app.h
		- Split WEP options out to match applet's usage

	* src/applet.glade
		- Add "Set password" buttons to WPA-EAP password
		- Remove standalone set password dialogs

	* editor/widget-wso-leap.c
	  editor/widget-wso-wep.c
	  editor/widget-wso-wpa-enterprise.c
	  editor/widget-wso-wpa-personal.c
		- Make "Show password" just obfuscate/unobfuscate passwords
		- Only set passwords in the keyring when the "Set Password" button is
			clicked
		- Do validation on WEP and WPA-PSK keys
		- Populate the password/key entries when security widget is shown

2008-02-28  Dan Williams  <dcbw@redhat.com>

	* src/wso-leap.c
		- (widget_create_func): fix up show password stuff

2008-02-22  Tambet Ingo  <tambet@gmail.com>

	Implement prepopulating of the passphrase dialog with the last known good
	values. Especially helpful for WPA-EAP which has a lot of widgets to fill.

	* src/passphrase-dialog.c (populate_dialog): Implement.

	* src/nm-wired-dialog.c (populate_dialog): Implement.

	* src/wireless-security-manager.c: Store wireless options in a hash to store
	their types.
	(wsm_get_option_by_type): Implement.

	* src/nm-gconf-wso.c (nm_gconf_wso_populate_wso): Implement.

	* src/nm-gconf-wso-wpa-psk.c (nm_gconf_wso_wpa_psk_get_wpa_version): Implement.

	* src/nm-gconf-wso-wpa-eap.c (nm_gconf_wso_wpa_eap_get_wpa_version): Implement.
