@@ -1,3 +1,8 @@
+2008-07-01  Tambet Ingo  <tambet@gmail.com>
+
+	* src/applet.c (nma_add_wired_networks): Escape wired network id before trying
+	to read it from gconf, fixes errors on network ids with spaces.
+
 2008-04-01  Dan Williams  <dcbw@redhat.com>
 
 	* src/applet-compat.c
